# llvm-fyp

./: .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
.github/workflows/: build.yml  test.yml
report/: conclusion.tex  intro.tex  main.bib  main.tex  methodology.tex  previous-work.tex  status.tex  vtable.tex
sample-programs/class-hierarchy/: foo.bc  foo.cpp  foo.ll
sample-programs/multi-inheritance/: multi-inheritance.bc  multi-inheritance.cpp  multi-inheritance.ll
sample-programs/pure-c/: pure.bc  pure.c  pure.ll
sample-programs/ret-an-object/: ret-an-object.bc  ret-an-object.cpp  ret-an-object.ll
sample-programs/smart-pointer/: smartptr.bc  smartptr.cpp  smartptr.ll
src/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  ClassAnalyzer.cpp  ClassAnalyzer.h  ClassHierarchy.cpp  ClassHierarchy.h  ClassHierarchyGraph.cpp  ClassHierarchyGraph.h  ClassInfo.cpp  ClassInfo.h  ClassSet.cpp  ClassSet.h  Common.h  Common.hpp  ConstraintSolver.cpp  ConstraintSolver.h  ConstraintSystem.cpp  ConstraintSystem.h  FunctionObjectFlow.cpp  FunctionObjectFlow.h  Main.cpp  Main.h  ModuleReader.cpp  ModuleReader.h  Symbols.cpp  Symbols.h  Utils.cpp  Utils.h  VTable.cpp  VTable.h
src/mlta/: Analyzer.cpp  Analyzer.h  CallGraph.cpp  CallGraph.h  Common.cpp  Common.h  VirtualCallTargets.cpp  VirtualCallTargets.h
template/: Makefile
template/src/: CMakeLists.txt
template/src/lib/: CMakeLists.txt  Dragon.cpp  Dragon.h  Project.h
tests/: ClassHierarchyTest.cpp  ClassSetTest.cpp  ClassSymbolTest.cpp  ConstraintsTest.cpp  TestMain.cpp  doctest.h
